# vigil

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  vigil.example.yaml
.github/workflows/: ci.yml
scripts/: smoke_api.py
tests/: test_code_applier_validate.py  test_config_optional_project_path.py  test_context_engine.py  test_context_engine_project_root.py  test_controls_limits_null.py  test_daemon_bootstrap.py  test_deep_analysis_profile.py  test_deep_suggest_json.py  test_dev_self.py  test_git_ops_commit.py  test_merge_queue.py  test_merge_queue_conflicts.py  test_pr_manager_branching.py  test_pr_status_payload.py  test_prioritizer.py  test_provider_connectivity.py  test_sanitize_llm_text.py  test_state_migration.py  test_state_paths_extra.py  test_task_planner_rotation.py  test_work_sources.py  test_worktree.py  test_worktree_errors.py
vigil/: __init__.py  __main__.py  cli.py  config.py  daemon_bootstrap.py  dev_self.py  project_config_loader.py
vigil/api/: models_discovery.py  pr_status.py  provider_test.py  routes.py  routes_v2.py  server.py  websocket.py
vigil/core/: analyzer.py  benchmark.py  code_applier.py  context_engine.py  deep_analysis.py  deep_suggest.py  git_ops.py  merge_queue.py  orchestrator.py  pr_manager.py  prioritizer.py  state.py  state_paths.py  task_planner.py  worktree.py
vigil/core/work_sources/: __init__.py  base.py  (+3 more)
vigil/db/: __init__.py  cache.py  models.py  repository.py  session.py  sqlite_read.py
vigil/prompts/: pr.py  system.py  tasks.py
vigil/providers/: __init__.py  base.py  ollama.py  openai_compat.py
vigil/ui/: __init__.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  types.ts
(+26 files in other folders)
